# libsnark-test

./: .gitignore  .gitmodules  0.secret  1.secret  LICENSE  Makefile  Proof  README.md  plotting.py  proof.hash  test_tokenGen.py  tokenGen.py  y.hash
data/: 0.secret  1.secret  test.secret  y.hash
src/: CMakeLists.txt  gensecret.cpp  hashtest.cpp  keygen.cpp  main.cpp  test_sha256.cpp  test_zk.cpp  tokenGen.py  verify.cpp
src/depends/: Makefile  cmake_install.cmake
src/depends/libsnark/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
src/depends/libsnark/depends/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/depends/libsnark/depends/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/depends/libsnark/depends/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/depends/libsnark/depends/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/depends/libsnark/depends/libff/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/depends/libsnark/depends/libff/libff/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/depends/libsnark/depends/libfqfft/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/depends/libsnark/depends/libfqfft/tutorials/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/depends/libsnark/libsnark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
